FIxed some stuff as requested by PalmerAl
Note: Some of the fixes didn't completely work so I had to change a bit of stuff, which might not look as clean as you would want it

--- a/css/taskOverlay.css
+++ b/css/taskOverlay.css
@@ -94,6 +94,10 @@
 	}
 }
 
-.dark-mode #add-task {
+body.dark-mode #task-overlay{
 	background-color: rgb(40, 44, 52) !important;
+}
+
+body.dark-mode #task-overlay #add-task {
+	background-color: rgb(33, 37, 43) !important;
 }
